Finalize updates on the web site

--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -10,17 +10,18 @@
     <div class="row">
 	{% for project in site.portfolio %}
       <div class="col-md-4 col-sm-6 portfolio-item">
-        <a class="portfolio-link" data-toggle="modal" href="#p{{ forloop.index }}">
+        <!-- <a class="portfolio-link" data-toggle="modal" href="#p{{ forloop.index }}">
           <div class="portfolio-hover">
             <div class="portfolio-hover-content">
               <i class="{{ site.data.style.portfolio-icon | default: "fas fa-plus fa-3x" }}"></i>
             </div>
-          </div>
-          <img class="img-fluid" src="{{ project.caption.thumbnail }}" alt="">
-        </a>
+          </div> -->
+          <img class="img-fluid mx-auto rounded-circle" src="{{ project.caption.thumbnail }}" alt="">
+        <!-- </a> -->
         <div class="portfolio-caption">
           <h4>{{ project.caption.title }}</h4>
           <p class="text-muted">{{ project.caption.subtitle }}</p>
+          <p>{{ project.content }}</p>
         </div>
       </div>
 	{% endfor %}
