--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -10,3 +10,10 @@ $gray-600: #868e96 !default;
 $gray-700: #495057 !default;
 $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
+
+$yobbi-atlantis: #99CC33 !default;
+$yobbi-chateau-green: #41B85F !default;
+$yobbi-jade:#009F7C !default;
+$yobbi-teal: #008285 !default;
+$yobbi-orient: #006577 !default;
+$yobbi-pickled-bluewood: #2F4858 !default;
