--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -30,8 +30,7 @@
               </div>
               <div class="form-group">
                 <input name="phone" class="form-control" id="phone" type="tel"
-                  placeholder="{{ site.data.sitetext[site.locale].contact.phone | default: "Phone Number*" }}"
-                  required="required" data-validation-required-message="{{ site.data.sitetext[site.locale].contact.phone-validation | default: "Please enter your phone number." }}">
+                  placeholder="{{ site.data.sitetext[site.locale].contact.phone | default: "Phone Number" }}">
                 <p class="help-block text-danger"></p>
               </div>
             </div>
@@ -39,8 +38,7 @@
               <div class="form-group">
                 <textarea name="message" class="form-control" id="message"
                   placeholder="{{ site.data.sitetext[site.locale].contact.message | default: "Message*" }}"
-                  required="required" data-validation-required-message="{{ site.data.sitetext[site.locale].contact.message-validation | default: "Please enter a message." }}">
-                </textarea>
+                  required="required" data-validation-required-message="{{ site.data.sitetext[site.locale].contact.message-validation | default: "Please enter a message." }}"></textarea>
                 <p class="help-block text-danger"></p>
               </div>
             </div>
