--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -27,7 +27,7 @@
                 alt="{{ project.alt }}"
               />
               <p>{{ project.content }}</p>
-              <button
+              <!-- <button
                 class="btn btn-primary"
                 data-dismiss="modal"
                 type="button"
@@ -35,7 +35,7 @@
                 <i class="fas fa-times"></i>
                 {{ site.data.sitetext[site.locale].portfolio.closebutton |
                 default: "Close Project" }}
-              </button>
+              </button> -->
             </div>
           </div>
         </div>
