--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,5 +1,5 @@
 <!-- Services -->
-  <section class="page-section" id="{{ site.data.sitetext[site.locale].services.section | default: "services" }}">
+  <!-- <section class="page-section" id="{{ site.data.sitetext[site.locale].services.section | default: "services" }}">
     <div class="container">
 	
       <div class="row">
@@ -25,5 +25,5 @@
       </div>
 	  
     </div>
-  </section>
+  </section> -->
 <!-- End Services -->
