--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,10 +3,10 @@ layout: default
 ---
 {% include navheader.html %}
 
-{% include services.html %}
 {% include portfolio_grid.html %}
+<!-- {% include services.html %} -->
 {% include about.html %}
 {% include timeline.html %}
 {% include team.html %}
-{% include clients.html %}
+<!-- {% include clients.html %} -->
 {% include contact.html %}
