--- a/_sass/layout/_contact.scss
+++ b/_sass/layout/_contact.scss
@@ -1,6 +1,6 @@
 // Styling for the contact section
 section#contact {
-  background-color: $gray-900;
+  background-color: $yobbi-pickled-bluewood;
   background-image: url("#{$contact-image}");
   background-repeat: no-repeat;
   background-position: center;
