--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,9 +4,9 @@ layout: default
 {% include navheader.html %}
 
 {% include portfolio_grid.html %}
-<!-- {% include services.html %} -->
+{% include services.html %}
 {% include about.html %}
 {% include timeline.html %}
 {% include team.html %}
-<!-- {% include clients.html %} -->
+{% include clients.html %}
 {% include contact.html %}
