Add Privacy Policy and Terms of Service

--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -46,7 +46,7 @@
             
 		  {% if site.data.sitetext[site.locale].timeline.end %}	
 			<li class="timeline-inverted">
-              <div class="timeline-image">
+              <div class="timeline-image-end">
                 <h4>{{ site.data.sitetext[site.locale].timeline.end }}</h4>
               </div>
             </li>
