--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,8 +25,14 @@
       <div class="col-md-4">
         <ul class="list-inline quicklinks">
           <li class="list-inline-item">
-            <a href="legal"
-              >{{ site.data.sitetext[site.locale].footer.legal | default:
+            <a href= {{site.data.sitetext[site.locale].footer.privacy-notice-url}}
+              >{{ site.data.sitetext[site.locale].footer.privacy-notice | default:
+              "Privacy Policy" }}</a
+            >
+          </li>
+          <li class="list-inline-item">
+            <a href={{site.data.sitetext[site.locale].footer.terms-of-service-url}}
+              >{{ site.data.sitetext[site.locale].footer.terms-of-service | default:
               "Privacy Policy" }}</a
             >
           </li>
