--- a/_sass/layout/_timeline.scss
+++ b/_sass/layout/_timeline.scss
@@ -55,6 +55,24 @@
       color: $white;
       border: 7px solid $gray-200;
       border-radius: 100%;
+      background-color: transparent;
+      h4 {
+        font-size: 10px;
+        line-height: 14px;
+        margin-top: 12px;
+      }
+    }
+    .timeline-image-end {
+      position: absolute;
+      z-index: 100;
+      left: 0;
+      width: 80px;
+      height: 80px;
+      margin-left: 0;
+      text-align: center;
+      color: $white;
+      border: 7px solid $gray-200;
+      border-radius: 100%;
       background-color: $primary;
       h4 {
         font-size: 10px;
@@ -124,6 +142,17 @@
           margin-top: 16px;
         }
       }
+      .timeline-image-end {
+        left: 50%;
+        width: 100px;
+        height: 100px;
+        margin-left: -50px;
+        h4 {
+          font-size: 13px;
+          line-height: 18px;
+          margin-top: 16px;
+        }
+      }
       &.timeline-inverted > .timeline-panel {
         float: right;
         padding: 0 30px 20px 20px;
@@ -149,6 +178,16 @@
           margin-top: 30px;
         }
       }
+      .timeline-image-end {
+        width: 150px;
+        height: 150px;
+        margin-left: -75px;
+        h4 {
+          font-size: 18px;
+          line-height: 26px;
+          margin-top: 30px;
+        }
+      }
       &.timeline-inverted > .timeline-panel {
         padding: 0 20px 20px;
       }
@@ -163,6 +202,14 @@
         padding: 0 20px 20px 100px;
       }
       .timeline-image {
+        width: 170px;
+        height: 170px;
+        margin-left: -85px;
+        h4 {
+          margin-top: 40px;
+        }
+      }
+      .timeline-image-end {
         width: 170px;
         height: 170px;
         margin-left: -85px;
